--- a/index.html
+++ b/index.html
@@ -6,9 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
+
 <body>
     <h1>Recursive</h1>
+    <hr>
+    <button onclick="fib(8)">Fib</button>
+    <button onclick="fact()">Fact</button>
+    <button onclick="findMaximum()">Find Maximum</button>
+    <button onclick="findSum()">Find Sum</button>
+    <hr>
 </body>
+
+
 <script src="./main.js"></script>
 <script src="./LinkedList.js"></script>
+<script src="./Sorts.js"></script>
+<script src="./Recursive.js"></script>
 </html>
