recursive funstions added

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 
 <body>
     <h1>Recursive</h1>
-    <hr>
+    <!-- <hr>
+    <p id="fib"></p>
     <button onclick="fib(8)">Fib</button>
-    <button onclick="fact()">Fact</button>
+    <button onclick="fact(3)">Fact</button>
     <button onclick="findMaximum()">Find Maximum</button>
     <button onclick="findSum()">Find Sum</button>
-    <hr>
+    <hr> -->
 </body>
 
 
