reversing string added and LinkedList improved

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </body>
 
 
-<script src="./main.js"></script>
+<script src="./towerOfHanoi.js"></script>
 <script src="./LinkedList.js"></script>
 <script src="./Sorts.js"></script>
 <script src="./Recursive.js"></script>
